blog/styles/main.css
body {
  margin: 0px;
}
main {
  position: relative;
  z-index: 1;
  margin-top: 100px;
  margin-left: auto;
  margin-right: auto;
}
.page-wrap {
  max-width: 80%;
  margin-left: auto;
  margin-right: auto;
  padding: 80px 3rem;
}

.center {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  scale: 75%;
  border-radius: 10px;
  border: 1px solid gray;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Times New Roman', Times, serif;
}

body {
  min-height: 100vh;
  background-color: rgb(80, 80, 80);
}
.header {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  padding: 1.3rem 10%;
  justify-content: space-between;
  display: flex;
  align-items: center;
  z-index: 100;
}

.header::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.3);
  z-index: -1;
}
.title {
  font-size: 2rem;
  color: white;
  text-decoration: none;
  font-weight: 600;
}
.navbar a {
  font-size: 1.15rem;
  color: white;
  text-decoration: none;
  font-weight: 300;
  margin-left: 2.5rem;
}
.icons {
  position: absolute;
  right: 5%;
  font-size: 3rem;
  color: white;
  cursor: pointer;
  display: none;
}

#check {
  display: none;
}

.blog-posts {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 1rem;
}

.blog-headers {
  display: grid;
  grid-template-columns: 1fr;
  gap: 1rem;
}

.blog-post {
  border-radius: 8px;
  border: 1px solid #eaeaea;
  box-shadow: 0 0.5rem 1.2rem rbga(0, 0, 0, 0.2);
  padding: 0.75rem 1.25rem;
  background: white;
}

.post {
  display: block;
}

@media (max-width: 642px) {
  .icons {
    display: inline-flex;
  }

  #check:checked ~ .icons #menu {
    display: none;
  }

  #check:checked ~ .icons #close {
    display: block;
  }

  .icons #close {
    display: none;
  }

  .navbar {
    position: absolute;
    background: rgba(0, 0, 0, 0.1);
    top: 100%;
    left: 0;
    height: 0;
    width: 100%;
    box-shadow: 0 0.5rem 0.5rem rgba(0, 0, 0, 0.1);
    overflow: hidden;
    transition: 0.3s ease;
  }

  #check:checked ~ .navbar {
    height: 7.5rem;
  }

  .navbar a {
    display: block;
    font-size: 1.5rem;
    margin: 1.5rem 0;
    text-align: center;
    transform: translateY(-50px);
    transition: 0.3s ease;
  }

  #check:checked ~ .navbar a {
    transform: translateY(0);
  }
}

